fix: logo z-index

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,6 +52,8 @@ a:active {
   top: 738px;
   left: 70px;
   height: 12px;
+
+  z-index: 10;
 }
 
 .btn {
